--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,20 @@
 *.exe
 *.out
 *.app
+OOP_Laba2/OOP_Laba2/OOP_Laba2.vcxproj.user
+OOP_Laba2/OOP_Laba2/OOP_Laba2.vcxproj.filters
+OOP_Laba2/OOP_Laba2/OOP_Laba2.vcxproj
+OOP_Laba2/OOP_Laba2/Debug/vc142.pdb
+OOP_Laba2/OOP_Laba2/Debug/vc142.idb
+*.db-shm
+*.db-wal
+*.db
+*.opendb
+*.ilk
+*.ipch
+*.pdb
+*.log
+*.tlog
+*.recipe
+*.sln
+OOP_Laba2/.vs/OOP_Laba2/v16/.suo
