--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ OOP_Laba2/OOP_Laba2/Debug/vc142.idb
 *.recipe
 *.sln
 OOP_Laba2/.vs/OOP_Laba2/v16/.suo
+OOP_Laba2/OOP_Laba2/Debug/sorting.obj.enc
+OOP_Laba2/вопросы.txt
