--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ OOP_Laba2/OOP_Laba2/Debug/vc142.idb
 OOP_Laba2/.vs/OOP_Laba2/v16/.suo
 OOP_Laba2/OOP_Laba2/Debug/sorting.obj.enc
 OOP_Laba2/вопросы.txt
+OOP_Laba2/OOP_Laba2/ClassDiagram.cd
