--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ OOP_Laba2/.vs/OOP_Laba2/v16/.suo
 OOP_Laba2/OOP_Laba2/Debug/sorting.obj.enc
 OOP_Laba2/вопросы.txt
 OOP_Laba2/OOP_Laba2/ClassDiagram.cd
+OOP_Laba2/OOP_Laba2/Debug/OOP_Laba2.vcxproj.FileListAbsolute.txt
